--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 ### Hugo ###
 # Generated files by hugo
-/public
-/resources/_gen
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
 
 # Executable may be added to repository
 hugo.exe
 hugo.darwin
 hugo.linux
 
-# End of https://www.gitignore.io/api/hugo
+# Temporary lock file while building
+/.hugo_build.lock
+
+# End of https://www.toptal.com/developers/gitignore/api/hugo
